@@ -1,1 +1,29 @@
 # TournamentProj
+Application to handle Round Robin and Elimination tournaments.
+
+-add javafx libraries inside Referenced Libraries
+...you can find the libraries in the folder "Important libs"
+
+
+-for mail and activation:
+
+ Step 1 go to run and debug tab
+ Step 2 create launch.json file
+ Step 3 add 
+        {
+            "type": "java",
+            "name": "MailAPI",
+            "request": "launch",
+            "mainClass": "MailAPI",
+            "projectName": "MailAPI_e765d83c",
+            "args": "--add-modules java.activation"
+        }
+
+-Start application
+*** Run the application from mainApp.java***
+
+
+
+// note:
+- you can find some samples that were saved in past just to check the size of teams:
+ so history tournaments are not  updated.
